src/run/uploader/snapshots/codspeed__run__uploader__upload_metadata__tests__get_metadata_hash-2.snap
---
source: src/run/uploader/upload_metadata.rs
expression: upload_metadata
---
{
  "repositoryProvider": "GITHUB",
  "version": 5,
  "tokenless": true,
  "profileMd5": "jp/k05RKuqP3ERQuIIvx4Q==",
  "runner": {
    "name": "codspeed-runner",
    "version": "2.1.0",
    "instruments": [
      "MongoDB"
    ],
    "executor": "valgrind",
    "os": "ubuntu",
    "osVersion": "20.04",
    "arch": "x86_64",
    "host": "host",
    "user": "user",
    "cpuBrand": "Intel(R) Xeon(R) CPU E5-2686 v4 @ 2.30GHz",
    "cpuName": "cpu0",
    "cpuVendorId": "GenuineIntel",
    "cpuCores": 2,
    "totalMemoryGb": 8
  },
  "platform": "github-actions",
  "platformSlug": "GITHUB_ACTIONS",
  "runPart": {
    "runId": "7044765741",
    "runPartId": "benchmarks_3.2.2",
    "jobName": "codspeed",
    "metadata": {
      "anotherKey": "anotherValue",
      "someKey": "someValue"
    }
  },
  "commitHash": "5bd77cb0da72bef094893ed45fb793ff16ecfbe3",
  "ref": "refs/pull/29/merge",
  "headRef": "chore/native-action-runner",
  "baseRef": "main",
  "owner": "CodSpeedHQ",
  "repository": "codspeed-node",
  "event": "pull_request",
  "sender": {
    "id": "19605940",
    "login": "adriencaccia"
  },
  "ghData": {
    "runId": "7044765741",
    "job": "codspeed"
  },
  "glData": null,
  "repositoryRootPath": "/home/runner/work/codspeed-node/codspeed-node/"
}
