src/run/uploader/snapshots/codspeed__run__uploader__upload_metadata__tests__get_metadata_hash.snap
---
source: src/run/uploader/upload_metadata.rs
expression: upload_metadata
---
{
  "version": 2,
  "tokenless": true,
  "profileMd5": "jp/k05RKuqP3ERQuIIvx4Q==",
  "runner": {
    "name": "codspeed-runner",
    "version": "2.1.0",
    "instruments": [
      "MongoDB"
    ],
    "os": "Ubuntu",
    "osVersion": "20.04",
    "arch": "x86_64",
    "host": "host",
    "user": "user"
  },
  "platform": "github-actions",
  "commitHash": "5bd77cb0da72bef094893ed45fb793ff16ecfbe3",
  "ref": "refs/pull/29/merge",
  "headRef": "chore/native-action-runner",
  "baseRef": "main",
  "owner": "CodSpeedHQ",
  "repository": "codspeed-node",
  "event": "pull_request",
  "ghData": {
    "runId": 7044765741,
    "job": "codspeed",
    "sender": {
      "id": 19605940,
      "login": "adriencaccia"
    }
  },
  "repositoryRootPath": "/home/runner/work/codspeed-node/codspeed-node/"
}
